# NZ_job_application

./: PRD.md  README.md  application_autofill_rules.yaml  job_application_material_bank.md  nz_it_company_targets.yaml  prescreen_answer_templates.md  pyproject.toml
app/: __init__.py
app/applications/: __init__.py  materials.py
app/browser/: __init__.py  autofill.py  field_detector.py  field_matcher.py  playwright_runner.py
app/cli/: __main__.py
app/config/: loader.py  schemas.py
app/dashboard/: __init__.py  render.py
app/db/: importers.py  job_repository.py  models.py  session.py
app/jobs/: __init__.py  classifier.py  normalizer.py  scorer.py
app/sources/: __init__.py  base.py  discovery.py  generic_html.py  greenhouse.py  http.py  jora_html.py  lever.py  registry.py  scanner.py  seek_email.py  smartrecruiters.py
app/workflows/: __init__.py  applications.py  manual_assist.py  mode_a.py  mode_b.py
data/: jobs.sqlite3
data/jora_pages/: AI jobs - 2,885 vacancies _ Jora.html  Business Analyst jobs - 3,286 vacancies _ Jora.html  data Engineer jobs - 1,838 vacancies _ Jora.html
nz_it_job_application_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_application_materials.py  test_application_workflow.py  test_ats_adapters.py  test_autofill.py  test_classifier_scorer.py  test_company_import.py  test_config_loader.py  test_dashboard.py  test_job_ingestion.py  test_jora_html.py  test_manual_assist.py  test_mode_a_workflow.py  test_mode_b_workflow.py  test_seek_email.py  test_source_discovery.py
tests/fixtures/: application_form.html  (+11 more)
(+163 files in other folders)
