[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nz-it-job-application-automation"
version = "0.1.0"
description = "Personal assistant for monitoring and preparing New Zealand IT job applications."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.49.0",
  "PyYAML>=6.0.2",
  "SQLAlchemy>=2.0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
